:bug: Prevent content jumping by preloading fonts

--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -34,6 +34,18 @@
   animation: slide 1200ms both;
 }
 
+.splash .clip {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  overflow: hidden;
+  clip: rect(0,0,0,0);
+  white-space: nowrap;
+  clip-path: inset(50%);
+  border: 0;
+}
+
 /* Congrats */
 .congrats {
   display: flex;
